# haskell-template

./: .gitignore  .hspec  .travis.yml  Makefile  README.md  default.nix  nixpkgs.json  package.yaml  project.nix  template.cabal
lib/: Lib.hs
src/: Main.hs
test/: LibSpec.hs  Main.hs
