cabal-version:       2.4

name:                template
version:             0.1.0.0
license:             NONE
license-file:        LICENSE
author:              Boshen

library
  default-language: Haskell2010
  hs-source-dirs: lib
  Exposed-modules:
    Lib
  build-depends:
    base >=4.12.0.0

executable template
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  main-is: Main.hs
  hs-source-dirs: src, lib
  other-modules:
    Lib
  build-depends:
    base >=4.12.0.0

test-suite template-test
  type: exitcode-stdio-1.0
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: test, lib
  other-modules:
    Lib
  build-depends:
    base >=4.12.0.0,
    hspec
