cabal-version:       2.4

name:                template
version:             0.1.0.0
license:             NONE
author:              Boshen

library
  default-language: Haskell2010
  hs-source-dirs: lib
  Exposed-modules:
    Lib
  Default-Extensions:
    NoImplicitPrelude,
    OverloadedStrings
  build-depends:
    base >=4.12.0.0,
    foundation >= 0.0.23

executable template
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: src, lib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  other-modules:
    Lib
  Default-Extensions:
    NoImplicitPrelude,
    OverloadedStrings
  build-depends:
    base >=4.12.0.0,
    foundation >= 0.0.23

test-suite template-test
  type: exitcode-stdio-1.0
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: test, lib
  other-modules:
    Lib
  Default-Extensions:
    NoImplicitPrelude,
    OverloadedStrings
  build-depends:
    base >=4.12.0.0,
    foundation >= 0.0.23,
    hspec
